# SnakeSFML

./: .gitignore  CMakeLists.txt  build.cmd  config.txt  tested_config.txt
include/: button.h  config_reader.h  draw.h  eat.h  engine.h  game.h  map.h  menu.h  settings.h  snake.h  tile_set.h
src/: CMakeLists.txt  button.cpp  config_reader.cpp  draw.cpp  eat.cpp  engine.cpp  game.cpp  main.cpp  map.cpp  menu.cpp  settings.cpp  snake.cpp  tile_set.cpp
test/: my_test_framework.h  test_all.cpp  test_snake.h
tests/: CmakeLists.txt  all_test.cpp  my_test_framework.h  test_config_reader.h  test_map.h  test_snake.h  test_tileset.h
tests/tested_configs/: config_array.txt  config_array_2d.txt  config_change_data.txt  config_combine.txt  config_norm.txt  config_string.txt  config_value.txt
